--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -10,6 +10,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div>111</div>
+    <div id="app1">111</div>
   </body>
 </html>
